--- a/web/src/index.html
+++ b/web/src/index.html
@@ -11,5 +11,6 @@
   <app-root></app-root>
 
   <script src="https://kit.fontawesome.com/e4bffd4da6.js" crossorigin="anonymous"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 </html>
